@@ -7,7 +7,10 @@ update-manager (1:0.101.0) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * UpdateManager/UpdateManagerText.py:
     - fix crash in changelog display (LP: #341577)
+      (thanks to Steve Beattie)
     - support NEWS.Debian from the server as well
+  * DistUpgrade/DistUpgradeAufs.py:
+    - fix in is_submount detection (thanks to liw for reporting)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Mar 2009 16:58:12 +0100
 
